--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -46,7 +46,7 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
 
      <p>
 Die Forschungsbibliographie erschließt die geistes- und kulturwissenschaftliche Tierforschung in ihrer disziplinären Vielfalt, gleichwohl ist sie weder vollständig noch ausgewogen; vielmehr trägt sie deutlich die Spuren ihres Entstehungskontextes, d.h. der Neueren Deutschen Literaturgeschichte.  
-Die Forschungsbibliographie wird ständig erweitert. Hinweise nehmen wir sehr gerne auf, bitte per Mail an <a href='mailto:roland.borgards@lingua.uni-frankfurt.de'>roland.borgards@lingua.uni-frankfurt.de</a>.
+Die Forschungsbibliographie wird ständig erweitert. Hinweise nehmen wir sehr gerne auf, bitte per Mail an <a href='mailto:clas-digital@dlist.server.uni-frankfurt.de'>clas-digital@dlist.server.uni-frankfurt.de</a>.
      </p>
 
      <p>Die Texte aus der Geschichte des Tierwissens werden im Zusammenhang mit dem Projekt „Büchners Tiere“ (<a href="https://www.uni-frankfurt.de/69369128/FB_10___NDL___Lehrende___Prof__Dr__Roland_Borgards">Roland Borgards</a>) erschlossen; daraus erklärt sich die Beschränkung auf den Zeitraum zwischen 1750 und 1850 und die Konzentration auf deutschsprachige Texte. Das hier zugänglich gemachte Korpus kann für benachbarte Fragen (Schillers Tiere, Tiecks Tiere, die Tiere der Romantik, literarische Tiere im frühen 19. Jahrhundert, Tiere in Goethes Faust, usw.) ohne Einschränkung benutzt werden. Eine Erweiterung des Korpus ist geplant, zunächst bis 1900, dann bis 1950, dann um frühneuzeitliche, mittelalterliche und antike zoologische Texte.
