--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -75,6 +75,10 @@ h2 {
 }
 
 .coollnklist {
+    margin: 0;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    margin-top: 0.25rem;
     color: blue;
     text-decoration: underline;
     cursor: pointer;
@@ -575,7 +579,7 @@ function getParameterByName(name, url) {
 
 
 function init() {
-	    document.getElementById("query").innerHTML = getParameterByName('query');
+	    //document.getElementById("query").innerHTML = getParameterByName('query');
 	    document.getElementById("srchbox").addEventListener("keypress",function(event){
 			if(event.key == "Enter")
 			{
@@ -711,6 +715,7 @@ function init() {
 		  let resultLinks = "";
 		  for(let i = 0; i < pagesList.length; i++) {
 		  resultLinks = resultLinks + " " + "<a class='coollnklist' onclick='document.getElementById(\"uniqueocrpage"+pagesList[i]+"\").scrollIntoView();window.location.replace(\"#page"+pagesList[i]+"\");changecolor(this);return true;'>" + pagesList[i] + "</a>";
+
 			for(let y = 0; y < HighlightList.length; y++)
 			{
 				//TODO: Search Dieter with full search and get the results to be highlighted....
@@ -744,15 +749,12 @@ function init() {
 			thpage.innerHTML=thpage.innerHTML.replace(new RegExp('(\\b'+searchResults.pages[i].word.replace(/[-[\]{}()*+?.,\\^$|#\s]/g, '\\$&')+'\\b)','gi'),'<mark>$1</mark>');
 		  }
 		}
-	//GetOCRTxt();
-
+		document.getElementsByClassName("coollnklist")[0].click();
 	});
 							      }}, function() {
-		// print some error message here
-//  for(let i = 0; i < HighlightList.length; i++)
-  //    x = x.replace(new RegExp('(\\b'+HighlightList[i]+'\\b)','gi'),'<mark>$1</mark>');
-
+															     alert("Something went wrong please report this to the system admins");
 	});
+
 }
 
 
@@ -772,9 +774,12 @@ window.addEventListener("load", init, false);
 
 .optioncont {
     display: block;
+    height: 2.5rem;
     margin: 0;
-    padding: 1rem;
+    padding: 0;
+    padding-top: 0.5rem;
     background-color: white;
+    overflow: scroll;
 }
 
 .SpecialOCR {
@@ -782,10 +787,10 @@ window.addEventListener("load", init, false);
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	margin-bottom: 0rem;
+	margin-bottom: 0.5rem;
 	margin-top: 1rem;
 	padding-right: 0;
-	overflow: auto;
+	overflow: hidden;
 	background-color: grey;
 
 }
@@ -793,6 +798,7 @@ window.addEventListener("load", init, false);
 .ocrdispstyle {
 	height: 100%;
 	margin-top: 0.4rem;
+	overflow: scroll;
 	padding: 0;
 }
 
@@ -809,30 +815,6 @@ window.addEventListener("load", init, false);
 	color: white;
 }
 
-.but1, .but2 {
-	margin-top: 0.7rem;
-	padding: 0;
-	cursor: pointer;
-	font: bold;
-	font-size: large;
-	text-transform: uppercase;
-	overflow: hidden;
-}
-
-.but1 {
-	grid-column: 1 /span 1;
-	margin-left: 1rem;
-}
-
-.but2 {
-	grid-column: 2 /span 1;
-	margin-right: 1rem;
-}
-
-.but1:hover {
-	background-color: black;
-	color: orange;
-}
 
 .butX:hover {
 	background-color: black;
@@ -840,9 +822,10 @@ window.addEventListener("load", init, false);
 }
 
 .linkliststyler {
-    margin: auto;
-    width: 80%;
+    grid-column: 1 /span 1;
+    grid-row: 1 / span 1;
     height: 1rem;
+    margin: 0;
     background-color: white;
     padding-bottom: 2rem;
 }
@@ -872,11 +855,8 @@ function shownone(x)
 function reset(x)
 {
     document.getElementById("linklst").style.height = "1.5rem";
-    console.log("Hello World!");
     x.style.height = "";
     x.scrollTop = 0;
-    document.getElementById("biblio").style.display = "none";
-    document.getElementById("searchboxstuff").style.display = "none";
 }
 
 function showall(x)
@@ -886,19 +866,19 @@ function showall(x)
     if(x.style.height != "80vh")
     {
 	x.style.height = "80vh";
-	console.log("Hello World!");
 	x.style.overflow = "auto";
-	document.getElementById("biblio").style.display = "block";
-	document.getElementById("searchboxstuff").style.display = "block";
     }
 }
 </script>
 </head>
 <body>
-
+    <!---
+    <div id="MoreInfoSrch" style='display: none;'>Ihr Suchbegriff '<mark id='query'></mark>'wurde auf folgenden Seiten gefunden: </div>!------>
 	<div class="pageContainer">
-	    <div style='display: inline-grid; grid-column: 2 /span 1;height:98vh;'> 
-		<div id="SearchOpts" class="optioncont" onmouseout='shownone(this);' onmouseover='showall(this);' style='top: 0;background-color: white;overflow:auto;'><div id="biblio" style='color: green;display:none;'></div><div id="searchboxstuff" style="display:none;"><hr><span style='margin-right: 1rem;'>Search again for:</span><input id='srchbox' type='text' placeholder="Next search..."><hr></div><div>Ihr Suchbegriff '<mark id='query'></mark>'wurde auf folgenden Seiten gefunden: </div><div id='linklst' class='linkliststyler'></div>
+	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height:98vh;'> 
+		<div id="SearchOpts" class="optioncont" onmouseout='shownone(this);' onmouseover='showall(this);' style='top: 0;background-color: white;overflow:auto;'><div style='display:grid;grid-template-columns: 90% 10%;padding: 0;'><div id='linklst' class='linkliststyler'></div><button style='grid-column: 2 /span 1;'>Next</button></div>
+		    <div id="biblio" style='color: green;'></div><div id="searchboxstuff"><hr><span style='margin-right: 1rem;'>Search again for:</span><input id='srchbox' type='text' placeholder="Next search..."><hr>
+		    </div>
 	    </div>
 
 	    <div id="olol" class="SpecialOCR">
