Small update remove the Advanced button

--- a/web/Search.html
+++ b/web/Search.html
@@ -843,7 +843,7 @@ function ShowLinks()
 				<!--<div class="form-wrapper-2 cf"> -->
 					<input id="SpecialSID" style='padding: 0.3rem;width: 20%;border-radius: 25px;' type="text" placeholder="Search here..." required>
 					<button id="srchButton" class="srchBtrn" style='display:none;' type="button" onclick="sendToPage('SpecialSID')">Search</button></input>
-					<button class="btclass2" type="button" onclick="openSearchOpts('AdvancedSearchOptions')">Advanced</button>
+					<!--<button class="btclass2" type="button" onclick="openSearchOpts('AdvancedSearchOptions')">Advanced</button> -->
 				<!--</div>-->
 			<div id="ResultBanner" style="display:none; margin-top:2rem;" >
 
