--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -373,7 +373,7 @@ function getVisiblePagesOCR()
 	let visiblePages = new Array();
 	for(let i = 0; i < allPages.length; i++) {
 		if(isElementInViewport(allPages[i])) {
-		    if(document.getElementById("olol").scrollTop<((allPages[i].offsetTop+allPages[i].clientHeight-300)))
+		    if(document.getElementById("OCRBuffer").scrollTop<((allPages[i].offsetTop+allPages[i].clientHeight-300)))
 			{
 			    visiblePages.push(allPages[i]);
 			}
@@ -487,7 +487,7 @@ async function deleteAll()
 function UpdateOCRTxt(x,res)
 {
 	  let RegSrch = /-----\s(\d+)\s.\s(\d+)\s-----/g;
-	x = '<p data-page="1" class="ocrpage">' + x;
+	x = '<p data-page="1" id="uniqueocrpage0" class="ocrpage">' + x;
     x = x.replace(RegSrch,'</p><p data-page="$1" id="uniqueocrpage$1" class="ocrpage" ondblclick="SwitchToPage(this);"><span class="pagelayout"> Page $1 / $2 </span><br>');
   	x+="</p>";
 	
@@ -616,7 +616,8 @@ function init() {
 		triggerDblclick(val[0]);
 	    }
 	}
-    document.getElementById("olol").onscroll = function() {
+    document.getElementById("OCRBuffer").onscroll = function() {
+	    console.log("Ocr scrolls now!");
 	    if(globalScrollLock)
 	    {
 		globalScrollLock = false;
